--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -143,7 +143,7 @@ jobs:
             tar -xvf  mpich-3.4.1.tar.gz && \
             mkdir /root/mpich-install && \
             cd mpich-3.4.1 && \
-            ./configure -prefix=/root/mpich-install |& tee c.txt && \
+            ./configure -prefix=/root/mpich-install --with-device=ch3 |& tee c.txt && \
             make 2>&1 | tee m.txt && \
             echo "Download and build netCDF version 4.7.4" && \
             wget ftp://ftp.unidata.ucar.edu/pub/netcdf/netcdf-c-4.7.4.tar.gz && \
