--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -122,7 +122,7 @@ jobs:
             uname -m
             yum install -y sudo && \
             sudo yum update && \
-            sudo yum groupinstall 'Development Tools' && \
+            sudo yum groupinstall 'Development Tools' -y && \
             sudo yum install -y epel-release && \
             sudo yum-config-manager --enable epel && \
             sudo yum -y install mpich openmpi-devel hdf5-devel curl-devel wget && \
