--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -123,7 +123,7 @@ jobs:
             yum install -y sudo && \
             sudo yum update && \
             sudo yum install gcc gcc-c++ make -y && \
-            sudo yum -y groupinstall 'Development Tools' && \
+            sudo yum -y groupinstall "Development Tools" && \
             sudo yum install -y epel-release && \
             sudo yum-config-manager --enable epel && \
             sudo yum -y install mpich openmpi-devel hdf5-devel curl-devel wget && \
