--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -143,9 +143,8 @@ jobs:
             pushd netcdf-c-4.7.4 && \
             export CPPFLAGS="-I/usr/include/hdf5/mpich -I${{ github.workspace }}/../include" && \
             export LDFLAGS="-L${{ github.workspace }}/../lib" && \
-            export LIBS="-lnetcdf -lhdf5_hl -lhdf5 -lz -lcurl" && \
-            ./configure && \
-            #--prefix /home/runner/work/netcdf4-python/netcdf4-python/.. --disable-shared CC="/usr/lib64/mpich" && \
+            #export LIBS="-lhdf5_mpich_hl -lhdf5_mpich -lm -lz" && \
+            ./configure --prefix /home/runner/work/netcdf4-python/netcdf4-python/.. --enable-netcdf-4 --enable-shared --enable-dap --enable-parallel4 --enable-pnetcdf && \
             make -j 2 && \
             make install && \
             popd && \
