--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -145,7 +145,8 @@ jobs:
             export LDFLAGS="-L${{ github.workspace }}/../lib" && \
             #export LIBS="-lhdf5_mpich_hl -lhdf5_mpich -lm -lz" && \
             pnetcdf --version && \
-            ./configure --prefix /home/runner/work/netcdf4-python/netcdf4-python/.. --disable-netcdf-4 --disable-dap --enable-shared --enable-parallel4 --enable-pnetcdf && \
+            ./configure --prefix /home/runner/work/netcdf4-python/netcdf4-python/.. --disable-netcdf-4 --disable-dap --enable-shared --enable-parallel4  && \
+            #--enable-pnetcdf
             make -j 2 && \
             make install && \
             popd && \
